# u_sh

./: .gitignore  3_update_docs.py  4_update_version.py  LICENSE  README.md  pyproject.toml
docs/: cheat_sheet.rst  commands.csv  conf.py  discussion.rst  index.rst
tests/: __init__.py  test_directory.py  test_file.py  test_result.py
u_sh/: __init__.py  __main__.py  common.py  directory.py  file.py  result.py
