[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "u-sh"
version = "2024.0.3"
description = ""
authors = [ "Felix Häberle <feilx@42sol.eu>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.2"
click = "^8.1.7"
trogon = "^0.6.0"
toml = "^0.10.2"
