[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "u-sh"
version = "2024.0.3"
description = ""
authors = [ "Felix Häberle <feilx@42sol.eu>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.2"
click = "^8.1.7"
trogon = "^0.6.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"
poetry-dynamic-versioning = "^1.4.1"
groundwork-sphinx-theme = "^1.1.1"
sphinx-autodoc-annotation = "^1.0.post1"
sphinx-design = "^0.6.1"
sphinx-copybutton = "^0.5.2"
sphinx-hoverxref = "^1.4.1"
sphinx-gallery = "^0.17.1"
sphinxawesome-theme = "^5.3.1"

